--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -21,7 +21,26 @@
             </div>
         </nav>
         
-        <div id="page-wrapper">		
+        <div id="page-wrapper">
+            <div class="alert alert-dismissable alert-danger" ng-repeat="errorMsg in errorMsgList">
+                <button type="button" 
+                        class="close" 
+                        data-dismiss="alert" 
+                        aria-hidden="true" 
+                        ng-click="msgHide(errorMsg)">&times;</button>
+                {{errorMsg}}
+            </div>      
+            
+            <div class="alert alert-dismissable alert-success" ng-repeat="msg in msgList">
+                <button type="button" 
+                        class="close" 
+                        data-dismiss="alert" 
+                        aria-hidden="true" 
+                        ng-click="msgSuccessHide(msg)">&times;</button>
+                {{msg}}
+            </div>
+            
+            
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#map">Map search</a></li>
                 <li><a data-toggle="tab" href="#map/newMap">New map</a></li>
@@ -37,12 +56,12 @@
                         <div class="row">      
                             <div class="col-sm-4">
                                 <label>Name</label>
-                                 <input class="form-control" />
+                                 <input ng-model="findMap.name" class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
                                 <label>Type</label>
-                                <select ng-model="map.type" class="form-control">
+                                <select ng-model="findMap.type" class="form-control">
                                     <option value="all">All</option>
                                     <option value="private">Private</option>
                                     <option value="public">Public</option>
@@ -51,7 +70,7 @@
                             
                             <div class="col-sm-4">
                                 <label>State</label>
-                                <select ng-model="map.state" class="form-control">
+                                <select ng-model="findMap.state" class="form-control">
                                     <option value="All">All</option>
                                     <option value="draft">Draft</option>
                                     <option value="active">Active</option>
@@ -61,29 +80,29 @@
                             <div class="col-sm-4">
                                 </br>
                                 <label>City</label>
-                                <input class="form-control" />
+                                <input ng-model="findMap.city" class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
                                 </br>
                                 <label>Creation start date</label>
-                                <input class="form-control" type="date"/>
+                                <input ng-model="findMap.startDate" class="form-control" type="date"/>
                             </div>
                             
                             <div class="col-sm-4">
                                 </br>
                                 <label>Creation end date</label>
-                                <input class="form-control" type="date"/>
+                                <input ng-model="findMap.endDate" class="form-control" type="date"/>
                             </div>
                 
                             <div class="col-sm-12">
                                 </br>
-                                <input type="checkbox" value="onlyMyMaps" value="onlyMyMaps"> search only my maps</input>
+                                <input ng-model="findMap.onlyMyMaps" type="checkbox" value="onlyMyMaps"> search only my maps</input>
                             </div>
                 
                             <div class="col-sm-4">
                                 <br/>
-                                <input type="submit" class="btn btn-primary" value="Search">
+                                <input type="submit" class="btn btn-primary" value="Search" ng-click="findMaps()">
                             </div>
                             
                             
@@ -91,7 +110,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-primary table-responsive">
+                <div class="panel panel-primary table-responsive" ng-show="mapList.length>0">
                     <div class="panel-heading">
                         <h3 class="panel-title"><i class="fa fa-list-alt"></i> Search Results</h3>
                     </div>
@@ -100,7 +119,6 @@
                             <thead>
                                 <tr>
                                     <th>Name</th>
-                                    <th>Creator</th>
                                     <th>Type</th>
                                     <th>State</th>
                                     <th>Creation date</th>
@@ -108,13 +126,12 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Actur simulation</td>
-                                    <td>user name 1</td>
-                                    <td>Private</td>
-                                    <td>Draft</td>
-                                    <td>01/10/2015</td>
-                                    <td>    
+                                <tr ng-repeat="map in mapList">
+                                    <td>{{map.name}}</td>
+                                    <td>{{map.type}}</td>
+                                    <td>{{map.state}}</td>
+                                    <td>{{map.creationDate}}</td>
+                                    <td>   
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-primary dropdown-toggle" 
@@ -141,29 +158,6 @@
                                             </div>
                                         </ul>
                                     </td> 
-                                </tr>
-
-                                <tr>
-                                    <td>Madrid simulation center</td>
-                                    <td>user name 2</td>
-                                    <td>Public</td>
-                                    <td>Active</td>
-                                    <td>01/05/2014</td>
-                                    <td>
-                                        <button type="button" class="btn btn-success" 
-                                                ng-click="startSimulation()">Start simulation</button>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>Manhattan simulation</td>
-                                    <td>user name 3</td>
-                                    <td>Public</td>
-                                    <td>Draft</td>
-                                    <td>01/04/2014</td>
-                                    <td>
-                                        <button type="button" class="btn btn-success disabled">Start simulation</button>
-                                    </td>
                                 </tr>
                             </tbody>
                         </table>
