--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -131,8 +131,16 @@
                                     <td>{{map.type}}</td>
                                     <td>{{map.state}}</td>
                                     <td>{{map.creationDate}}</td>
-                                    <td>   
-                                        <ul class="nav nav-tabs">  
+                                    <td>
+                                        <button type="button" 
+                                                class="btn btn-default fa fa-play-circle-o" 
+                                                ng-click="startSimulation(map._id)">
+                                        </button>
+                                        <button type="button" class="btn btn-default fa fa-pencil-square-o"></button>
+                                        <button type="button" class="btn btn-default fa fa-download"></button>
+                                        <button type="button" class="btn btn-default fa fa-trash-o"></button>
+                                        
+                                        <!--<ul class="nav nav-tabs">  
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-primary dropdown-toggle" 
                                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -154,7 +162,7 @@
                                                     <li role="separator" class="divider"></li>
 
                                                     <li><a href="#map" role="button" data-toggle="modal" data-target="#deleteMapModal">Delete map</a></li>
-                                                </ul>
+                                                </ul>-->
                                             </div>
                                         </ul>
                                     </td> 
