--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -132,12 +132,12 @@
                                     <td>{{map.creationDate}}</td>
                                     <td>
                                         <button type="button" 
-                                                class="btn btn-default fa fa-play-circle-o" 
+                                                class="btn btn-success fa fa-play-circle-o" 
                                                 ng-click="startSimulation(map._id)">
                                         </button>
-                                        <button type="button" class="btn btn-default fa fa-pencil-square-o"></button>
-                                        <button type="button" class="btn btn-default fa fa-download"></button>
-                                        <button type="button" class="btn btn-default fa fa-trash-o"></button>
+                                        <button type="button" class="btn btn-primary fa fa-pencil-square-o"></button>
+                                        <button type="button" class="btn btn-primary fa fa-download"></button>
+                                        <button type="button" class="btn btn-danger fa fa-trash-o"></button>
                                         
                                         <!--<ul class="nav nav-tabs">  
                                             <div class="btn-group">
